@@ -157,6 +157,7 @@ See docs/WHAT_IS_WEFTEND.md and docs/WHY_RECEIPTS.md for details.
 - `ticket_summary.txt` now includes report state lines (`reportRunId`, `reportLibraryKey`, `reportStatus`, `reportBaseline`, `reportLatest`, `reportBuckets`).
 - `ticket_summary.txt` now includes compare artifact identity lines (`compareArtifacts`, `compareReceiptFileDigest`, `compareReportFileDigest`).
 - `ticket_summary.txt` now also includes compare semantics lines (`compareVerdict`, `compareBuckets`, `compareBucketCount`, `compareChangeCount`) with deterministic text-report fallback when `compare_receipt.json` is absent.
+- Ticket-pack assembly now stages to `ticket_pack.stage` and finalizes to `ticket_pack` only after privacy lint passes.
 
 7) Builder integration (for tools built on top)
 - Export deterministic integration JSON:
